#1268 Fix rendering and accuracy defects in the user docs
An unclosed code fence rendered the group isNull/isNotNull semantics as
Java. The SIMD section claimed the Vector API engages automatically,
contradicting its own instruction to add the incubator module. The
roadmap listed Bloom filter pushdown, which has shipped. The geospatial
guide claimed page-level pruning that the page filter does not do (Parquet
has no per-page geospatial statistics), and the compat example understated
its filter as row-group-only although it runs Hardwood's record filter.
Two sentences referred to text that does not exist.